fixing author spacing

--- a/_sass/author-info.scss
+++ b/_sass/author-info.scss
@@ -62,7 +62,7 @@
 	padding: 40px 20px 20px 20px;
 }
 
-.author-info-description:nth-child(n+2){
+.author-info-description:nth-of-type(n+2){
 	padding: 40px 0 0 0;
 }
 	
